Make the SWT implementation the primary one
git-svn-id: https://subversion.auckland.ac.nz/svn/UoA.EC/NetAccountClient/Java/trunk@12815 bc4a35e3-ade6-0310-8e1d-83c6a0d22d13